<resources>
    <string name="app_name">健康手环</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pedometer">计步</string>
    <string name="sport_distance">运动距离</string>
    <string name="steps">步数</string>
    <string name="pedometerHis">步数历史记录</string>
    <string name="sport_distance_his">运动距离历史记录</string>
    <string name="sport_time">运动时间</string>
    <string name="kaloria">卡路里</string>
    <string name="kaloria2">能量消耗</string>
    <string name="heart_rate">心率</string>
    <string name="sleep">睡眠质量</string>
    <string name="health_scan">健康扫描</string>
    <string name="caloria_his">能量消耗历史记录</string>
    <string name="step_his">步数历史记录</string>
    <string name="sport_time_his">运动时间历史记录</string>
    <string name="distance_his">运动距离历史记录</string>
    <string name="oxygen_his">血氧历史记录</string>
    <string name="heartRate_his">心率历史记录</string>
    <string name="remind_title">提醒</string>
    <string name="reset_password">重置密码</string>
    <string name="alter_password">修改密码</string>
    <string name="sos_title">呼叫详情</string>
    <string name="sleep_his">睡眠质量历史记录</string>
    <string name="pressure_his">血压历史记录</string>
    <string name="sugar_his">血糖历史记录</string>
    <string name="sport_his">运动时间历史记录</string>
    <string name="healthy_his">健康扫描历史记录</string>
    <string name="healthyAdvice">健康建议</string>
    <string name="healthyAdviceCollect">健康收藏</string>
    <string name="healthyshu">健康指数</string>
    <string name="healthyAdviceDetail">健康详情</string>
    <string name="healthyAdviceCollectDetail">健康收藏详情</string>
    <string name="inputCode">输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="bind_device">绑定手环</string>
    <string name="registerInfo">基本信息</string>
    <string name="login">登录</string>
    <string name="minfo">主页</string>
    <string name="name">姓名</string>
    <string name="phoneNum">手机号码</string>
    <string name="password">密码</string>
    <string name="basic_phoneNum">手机号码</string>
    <string name="EXname">紧急联系人姓名</string>
    <string name="EXname2">紧急联系人</string>
    <string name="EXphoneNum">紧急联系人手机号码</string>
    <string name="cid">客服号</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="save">保存</string>
    <string name="color">#ffffff</string>
    <string name="history">查看历史</string>
    <string name="code">输入蓝牙地址</string>
    <string name="codeAagin">再次输入蓝牙地址</string>
    <string name="bianhao">输入编号</string>
    <string name="pederColor">#4682B4</string>
    <string name="caloriaColor">#f8bc27</string>
    <string name="sportTimeColor">#1d6bf1</string>
    <string name="HeartRateColor">#FF0000</string>
    <string name="sleepColor">#ab45fc</string>
    <string name="healthScanColor">#03ab35</string>
    <string name="bloodsugar1">餐前</string>
    <string name="sugar_after">餐后</string>
    <string name="sugar_unit">mmol/L</string>
    <string name="pressure_unit">mmHg</string>
    <string name="bloodsugar2">餐后mmol/L</string>
    <string name="inputtemp">请输入体温℃</string>
    <string name="bloodPressure">高压mmHg</string>
    <string name="lowbloodPressure">低压mmHg</string>
    <string name="weightting">体重kg</string>
    <string name="todayhealtystate">健康状况</string>
    <string name="temper_state">体温状况</string>
    <string name="temper_state_history">体温状况历史</string>
    <string name="healthstatehis">健康状况历史</string>
    <string name="aimpercent">目标完成率</string>
    <string name="todaystep">今日步数</string>
    <string name="gentlereminder">温馨提示</string>
    <string name="hour">小时</string>
    <string name="sleep_achieve_rate">睡眠达成率</string>
    <string name="sleep_low_time">浅睡</string>
    <string name="sleep_deep_time">深睡</string>
    <string name="today_sport_time">今日运动时间</string>
    <string name="today_caloria">当日卡路里</string>
    <string name="heart_unit">次/分钟</string>
    <string name="heart_rate_his">心率(次/分钟)</string>
    <string name="minute">分钟</string>
    <string name="hig_pre">高压</string>
    <string name="low_pre">低压</string>
    <string name="fasting">餐前</string>
    <string name="temper">体温</string>
    <string name="poor">差</string>
    <string name="fen">分</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="postprandial">餐后</string>
    <string name="sugar">血糖</string>
    <string name="fast_bre">血糖餐前</string>
    <string name="fast_after">血糖餐后</string>
    <string name="health_data_finish">健康浏览数据处理完成</string>
    <string name="sleep_reminder">提示:睡前跟睡醒请点击手环按键</string>
    <string name="net">请检查网络是否良好</string>
    <string name="step">步</string>
    <string name="heartrate">心率值</string>
    <string name="heartrate_recoed">心率历史记录</string>
    <string name="daka">大卡</string>
    <string name="todaycaloria">今日消耗</string>
    <string name="complet_rate">完成率</string>
    <string name="taday_step">当日步数</string>
    <string name="date">日期</string>
    <string name="collect">收藏</string>
    <string name="my_collect">我的收藏</string>
    <string name="operate">操作</string>
    <string name="preblem">我要咨询</string>
    <string name="services_advice">客户留言:</string>
    <string name="services_call">呼叫客服</string>
    <string name="services_send">发送</string>
    <string name="healthtip">健康小贴士</string>
    <string name="services_text">您的呼叫已受理\n请保持通话畅通</string>
    <string name="healthtipcontent">      跑步的过程中,最好每15分钟就补充一定的水分，但不可太多.</string>
    <string name="gentlereminercon">   用手指按住手环的左右两边,大约15秒左右,可以测试完成</string>
    <string name="heart_rate_con">      成年人每分钟心跳大约是七八十次,但在60到100次之间都属正常</string>
    <string name="sleep_tip_content">       锻炼身体，强度以微微出汗为宜，每次30分钟以上，持之以恒，有助人睡</string>
    <string name="sleep_tip_top">       对于成年人来说,一般保证7小时左右睡眠即可。</string>
    <string name="sport_time_tips">       老年人以身体微微出汗、愉悦轻松为好,运动时间以个人身体状况而定。</string>
    <string name="sugar_top_tips">"             "健康成人的血糖参考值为餐前空腹血糖3.9~6.1mml/L,餐后2小时小于7.8mml/L</string>
    <string name="pressure_top_tips">"          "健康成人的正常范围90~120(mmHg),女性稍低,血压会随年龄增长相应的增高</string>
    <string name="health_bottom_tips">本健康体检报告为参考性报告。\n健康体检的数据来源为昨日用户自动采集和手动输入的健康指标,本数据的完整,为后续健康服务提供重要依据。</string>
    <string name="sugar_bottom_tips">本血糖值的数据为用户自行采集、滑动输入,数据值上传至后台,会根据该数据及其他健康指标为用户提供健康服务,请确保该数据的准确性与连续性</string>
    <string name="pressure_bottom_tips">本血压值的数据为手环自动采集,数据值上传至后台,会根据该数据及其他健康指标为用户提供健康服务,请确保该数据的准确性与连续性</string>
    <string name="sure">确定</string>
    <string name="advice_right">咨詢</string>
    <string name="remind">开启后，手环将会进入智能提醒模式。</string>
    <string name="telephone_call_remind">来电提醒</string>
    <string name="telephone_msg_remind">短信提醒</string>
    <string name="clock_remind">闹钟提醒</string>
    <string name="clock_remind_details">闹钟提醒详情</string>
    <string name="medicine_remind">服药提醒</string>
    <string name="medicine_remind_details">服药提醒详情</string>
    <string name="fd_remind">防丢提醒</string>
    <string name="sedentary_remind">久坐提醒</string>
    <string name="display_show">功能展示</string>
    <string name="sleep_remind">睡眠提醒</string>
    <string name="sleep_remind_detail">睡眠提醒详情</string>
    <string name="save_sedentary">保存</string>
    <string name="matters_name_time">提醒时间 :</string>
    <string name="clock_switch">睡眠闹钟开关 :</string>
    <string name="clock_shock">手机震动 :</string>
    <string name="clock_music">音乐提醒 :</string>
    <string name="remind_frequency">提醒频率 :</string>
    <string name="sleep_mid_start_time">午睡开始时间 :</string>
    <string name="sleep_mid_end_time">午睡结束时间 :</string>
    <string name="sleep_night_start_time">晚上入睡时间 :</string>
    <string name="sleep_night_end_time">早上醒来时间 :</string>
    <string name="weeks_monday">星期一</string>
    <string name="weeks_tuesday">星期二</string>
    <string name="weeks_wednesday">星期三</string>
    <string name="weeks_thursday">星期四</string>
    <string name="weeks_friday">星期五</string>
    <string name="weeks_Saturday">星期六</string>
    <string name="weeks_sunday">星期日</string>
    <string name="repeat_once">单次提醒</string>
    <string name="senven">周日</string>
    <string name="one">周一</string>
    <string name="two">周二</string>
    <string name="three">周三</string>
    <string name="four">周四</string>
    <string name="five">周五</string>
    <string name="six">周六</string>
    <string name="toast_save_successful">保存成功</string>
    <string name="set_ok">设置完成</string>
    <string name="data_not_null">数据不能为空</string>
    <string name="refresh">刷新</string>
    <string name="delete">删除</string>
    <string name="repeat">重复</string>
    <string name="back">还原</string>
    <string name="add">添加</string>
    <string name="already_finish">已完成</string>
    <string name="aim">目标</string>
    <string name="litter_remind">小提示</string>
    <string name="toal_step">当前总步数</string>
    <string name="toal_distance">当前运动距离</string>
    <string name="sleep_deep">深睡:</string>
    <string name="sleep_low">浅睡:</string>
    <string name="sleep_total">总数:</string>
    <string name="hour_unit">分钟</string>
    <string name="pressure">血压</string>
    <string name="oxygen">血氧</string>
    <string name="pressure_history_recoed">血压历史记录</string>
    <string name="sugar_history_recoed">血糖历史记录</string>
    <string name="font_size">Font size</string>
    <string name="body_size">Body size</string>
    <string name="preview_content_description">Preview of VNTNumberPickerPreference</string>
    <string name="check_it_out_on_github">&lt;a href="https://github.com/vanniktech/VNTNumberPickerPreference">Check it out on GitHub&lt;/a></string>
    <string name="select_ringtone_slient">静音</string>
    <string name="parsonal_basic_info">个人基本信息</string>
    <string name="choice_more">你是否存在以下症状(多选)</string>
    <string name="high_pressure">高血压</string>
    <string name="high_sugar">高血糖</string>
    <string name="low_sugar">低血糖</string>
    <string name="high_xuezhi">高血脂</string>
    <string name="Cardiovascular">心脑血管</string>
    <string name="arthritis">关节炎</string>
    <string name="Neck_and_back_pain">颈肩腰腿疼</string>
    <string name="Rheumatic_pain">风湿类疼痛</string>
    <string name="Gastrointestinal_disorders">胃肠疾病</string>
    <string name="Respiratory_diseases">呼吸类疾病</string>
    <string name="Eye_diseases">眼部疾病</string>
    <string name="Liver_disease">肝病</string>
    <string name="Immunization_tumor">免疫、肿瘤</string>
    <string name="Sub_health">亚健康</string>
    <string name="others">其他</string>
    <string name="nights_choice">九种体质日常调理</string>
    <string name="Yin_deficiency">阴虚质</string>
    <string name="Special_intrinsic_quality">特稟质</string>
    <string name="Qi_quality">气郁质</string>
    <string name="Quality_heat">湿热质</string>
    <string name="Phlegm">痰湿质</string>
    <string name="Blood_stasis">血瘀质</string>
    <string name="Yang_and_quality">阳虚质</string>
    <string name="Qi_deficiency">气虚质</string>
    <string name="Gentleness">平和质</string>
    <string name="like_games">喜欢那些文娱节目(多选)</string>
    <string name="access_books">评书</string>
    <string name="drama">戏曲</string>
    <string name="dance">舞蹈</string>
    <string name="other">其他</string>
    <string name="Exercise_frequency">体育锻炼频率</string>
    <string name="every_day">每天</string>
    <string name="every_week_one_more">每周多次</string>
    <string name="occasionally">偶尔</string>
    <string name="never_train">不锻炼</string>
    <string name="eat_habit">饮食习惯(多选)</string>
    <string name="Meat_and_vegetables_balanced">荤素均衡</string>
    <string name="Meat_main">荤食为主</string>
    <string name="vegetables_main">素食为主</string>
    <string name="Addicted_to_food">嗜食</string>
    <string name="Halophilic">嗜盐</string>
    <string name="Addicted_to_oil">嗜油</string>
    <string name="Addicted_to_sugar">嗜糖</string>
    <string name="Smoking_status">吸烟状况</string>
    <string name="never_smoking">从不</string>
    <string name="quit">已戒烟</string>
    <string name="smoking">吸烟</string>
    <string name="Drink_status">喝酒状况</string>
    <string name="frequency">经常</string>
</resources>