<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.bt.elderbracelet.view.TitleView
        android:id="@+id/titleview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/historybg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:id="@+id/tvdate_title"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/hig_pre"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/low_pre"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/fasting"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/postprandial"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <ListView
            android:id="@+id/LVhealthStateList"
            android:layout_width="fill_parent"
            android:layout_height="0sp"
            android:layout_marginTop="20sp"
            android:layout_weight="4.0"
            android:cacheColorHint="#00000000"
            android:clickable="false"
            android:divider="@null"
            android:listSelector="#00000000"
            android:orientation="vertical"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

</LinearLayout>